cmake_minimum_required (VERSION 3.16.3)
project (Test)
set (CMAKE_CXX_COMPILER clang++)
set (PROJECT_HEADER_DIR ${CMAKE_SOURCE_DIR}/headers)
file (GLOB_RECURSE SRC src/*.cpp)
file (GLOB_RECURSE HEADERS ${PROJECT_HEADER_DIR}/*.h)
ADD_DEFINITIONS (-Wall -std=c++17)
ADD_EXECUTABLE (Test ${HEADERS} ${SRC})
target_include_directories (Test PRIVATE ${PROJECT_HEADER_DIR}) 